web-app/style.css
@font-face {
    font-family: 'Inter';
    src: url('font.ttf') format('truetype');
}

* {
    overflow: hidden;
    margin: 0;
    background-color: black;
    box-sizing: border-box;
}

/* ========================     */
/* STYLED IDs                   */
/* ========================     */

#slideshow-layout {
    width: 100vw;
    height: 100vh;
    text-align: center;
}

#slideshow-image {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: auto;
    max-width: 100%;
    height: auto;
    max-height: 100%;
}

#background-image {
    z-index: -1;
    filter: blur(20px);
    -webkit-filter: blur(20px);
    height: 200%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    top: 50%;
}

#hide-current-image {
    position: absolute;
    top: 1vh;
    right: 1vh;
    background: transparent;
    height: 25px;
    cursor: pointer;
    visibility: hidden;

    filter: drop-shadow(0px 0px 1px #FFFFFF);
}

/* ========================     */
/* STYLE CLASSES                */
/* ========================     */

.label {
    position: absolute;
    bottom: 3vh;
    left: 3vh;
    color: #FFFFFF;
    font-family: "Inter", serif;
    background: transparent;
    font-size: 30px;
    text-align: left;
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: black;
}

.weather {
    position: absolute;
    bottom: 3vh;
    right: 3vh;
    text-align: right;
    background: transparent;
}

.weather-label {
    text-align: right;
    color: #FFFFFF;
    font-family: "Inter", serif;
    background: transparent;
    font-size: 30px;
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: black;
    flex-grow: 0;
}

.weather > * {
    background: transparent;
}

/* ========================     */
/* FADE IN ANIMATION            */
/* ========================     */

.fade-in {
    animation: fadeIn ease 1s forwards;
    -webkit-animation: fadeIn ease 1s forwards;
    -moz-animation: fadeIn ease 1s forwards;
    -o-animation: fadeIn ease 1s forwards;
    -ms-animation: fadeIn ease 1s forwards;
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@-moz-keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@-webkit-keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@-o-keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@-ms-keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

/* ========================     */
/* FADE OUT ANIMATION           */
/* ========================     */

.fade-out {
    animation: fadeOut ease 1s forwards;
    -webkit-animation: fadeOut ease 1s forwards;
    -moz-animation: fadeOut ease 1s forwards;
    -o-animation: fadeOut ease 1s forwards;
    -ms-animation: fadeOut ease 1s forwards;
}

@keyframes fadeOut {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

@-moz-keyframes fadeOut {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

@-webkit-keyframes fadeOut {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

@-o-keyframes fadeOut {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

@-ms-keyframes fadeOut {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

